I have added another heading

--- a/contacts.html
+++ b/contacts.html
@@ -7,6 +7,7 @@
   <title>contacts</title>
 </head>
 <body>
+  <h1>This is our full guide and catalog about our Management system</h1>
   
   <h1 style="color: blue;">Welcome to our contacts for the Management system</h1>
   <hr>
