I have added another heading, i also added some dummy text

--- a/contacts.html
+++ b/contacts.html
@@ -17,6 +17,10 @@
 <h2>Managers of the System</h2>
 <p>The managers of the system are many in number and they were collaborative during the creation of the system</p>
 
+<h3>This is creation of dummy text</h3>
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et architecto tenetur numquam, nesciunt labore autem? Quisquam consectetur possimus atque consequatur libero minima, asperiores quod architecto animi, sit obcaecati, labore deleniti?</p>
+
 
 
 
