I have just added another paragraph using github website

--- a/contacts.html
+++ b/contacts.html
@@ -22,7 +22,7 @@
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et architecto tenetur numquam, nesciunt labore autem? Quisquam consectetur possimus atque consequatur libero minima, asperiores quod architecto animi, sit obcaecati, labore deleniti?</p>
 
 
-
+<p>This is editing the file hosted on Github using its own built in editor</p>
 
 </body>
 </html>
